--- a/scss/base/base.scss
+++ b/scss/base/base.scss
@@ -16,15 +16,15 @@ body {
 
 
 .row.big_row {
-  margin: 0 -60px;
-  padding: 0 30px;
+  // margin: 0 -60px;
+  // padding: 0 30px;
   // background: #fff;
 }
 
 @media screen and (max-width: 1280px) {
   .row.big_row {
-      margin: 0 -40px;
-      padding: 0;
+      //margin: 0 -40px;
+      //padding: 0;
   }
 }
 
@@ -33,17 +33,17 @@ body {
       width: calc(100% - 60px);
   }
 }
-@media (min-width: 1360px) {
+@media (min-width: 1370px) {
   .container {
-      width: 1340px;
+    max-width: 1340px;
   }
 }
 
 
 @media screen and (max-width: $mobile) {
   .row.big_row {
-    margin: 0 -30px;
-    padding: 0 0px;
+    //margin: 0 -30px;
+    //padding: 0 0px;
     // background: #fff;
   }
 }
