--- a/scss/components/article_page.scss
+++ b/scss/components/article_page.scss
@@ -130,7 +130,7 @@ $article_text_padding: 30px;
 }
 
 .social_share_and_info .sign_for_maillist {
-  margin: 16px 0 0 0;
+  margin: 0;
 }
 
 // <===========================================================>
